Incomplete Client Project

--- a/styles.css
+++ b/styles.css
@@ -98,9 +98,7 @@ footer{
     color: #EEB9CB;
 }
 .menu{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    display: flex;
 }
 .featured{
     display: grid;
@@ -126,6 +124,12 @@ footer{
     color: #266C64;
     padding: 1rem;
 }
-menu h2{
-    background-color: #266C64;
+@media(min-width:500px){
+    .cats{
+        grid-template-rows: 6rem 20rem 1fr 20rem;
+    }
+    table{
+        display: flex;
+        justify-content: center;
+    }
 }
